EXLM-3778 Fix truncation in Icon block

--- a/blocks/icon-block/icon-block.css
+++ b/blocks/icon-block/icon-block.css
@@ -49,7 +49,7 @@
   line-height: 18.2px;
   color: var(--spectrum-gray-700);
   text-overflow: ellipsis;
-  -webkit-line-clamp: 4;
+  flex: 1;
   -webkit-box-orient: vertical;
   overflow: hidden;
   display: -webkit-box;
